--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,16 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav" ">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home/About me<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home/About me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
                 
               </ul>
             </div>
@@ -62,8 +62,9 @@
 
 
 <!--image-->
+<div class="displaynone">
 <img src="image/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="ocean image" width="450px" class="oceanimage"> 
- 
+</div>
 </div>
 </body>
 </html>
