--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav" ">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home/About me<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  <a class="nav-link" href="index.html">Home/About me</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
@@ -37,37 +37,77 @@
 
 
     </header>
-<!--image gararry-->
+<!--image galleryy-->
 <div class="contianer">
-    <div class="row" id="gallery" data-toggle="modal" data-target="#exampleModal">
+    <div class="row" id="gallery-rrow1" data-toggle="modal" data-target="#exampleModal">
         <div class="col-12 col-sm-6 col-lg-3">
-          <img class="w-100" src="image/sunset.jpg" data-target="#carouselExample" data-slide-to="0">
+          <img class="w-100" src="image/sunset.jpg" alt="sunset" data-target="#carouselExample" data-slide-to="0">
+          <!--text to explain the images--> 
+          <div class="text-block">
+              <h4>Nature</h4>
+            <p>What a beautiful sunrise</p>
+          </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2184.jpg" data-target="#carouselExample" data-slide-to="0">
+           <!--text to explain the images--> 
+           <div class="text-block">
+            <h4>Nature</h4>
+          <p>What a beautiful sunrise</p>
+        </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2714.jpg" data-target="#carouselExample" data-slide-to="0">
+           <!--text to explain the images--> 
+           <div class="text-block">
+            <h4>Nature</h4>
+          <p>What a beautiful sunrise</p>
+        </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2734.jpg" data-target="#carouselExample" data-slide-to="0">
+           <!--text to explain the images--> 
+           <div class="text-block">
+            <h4>Nature</h4>
+          <p>What a beautiful sunrise</p>
+        </div>
         </div>
       </div>
 
-      <div class="row" id="gallery2" data-toggle="modal" data-target="#exampleModal">
+      <div class="row" id="gallery-row2" data-toggle="modal" data-target="#exampleModal">
         <div class="col-12 col-sm-6 col-lg-3">
-          <img class="w-100" src="image/sunset.jpg" data-target="#carouselExample" data-slide-to="0">
+          <img class="w-100" src="image/sunset.jpg" alt="sunset" data-target="#carouselExample" data-slide-to="0">
+           <!--text to explain the images--> 
+           <div class="text-block">
+            <h4>Nature</h4>
+          <p>What a beautiful sunrise</p>
+        </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2184.jpg" data-target="#carouselExample" data-slide-to="0">
+           <!--text to explain the images--> 
+           <div class="text-block">
+            <h4>Nature</h4>
+          <p>What a beautiful sunrise</p>
+        </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2714.jpg" data-target="#carouselExample" data-slide-to="0">
+           <!--text to explain the images--> 
+           <div class="text-block">
+            <h4>Nature</h4>
+          <p>What a beautiful sunrise</p>
+        </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2734.jpg" data-target="#carouselExample" data-slide-to="0">
+          <!--text to explain the images--> 
+          <div class="text-block">
+            <h4>Nature</h4>
+          <p>What a beautiful sunrise</p>
+        </div>
         </div>
       </div>
-    </div>
+
 </body>
 </html>
