--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
 
 </header>
 
+<div class="background">
 
 <h1>Contact me</h1>
 
@@ -62,8 +63,8 @@
 
 
 <!--image-->
-<div class="displaynone">
 <img src="image/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="ocean image" width="450px" class="oceanimage"> 
+
 </div>
 </div>
 </body>
