--- a/portfolio.html
+++ b/portfolio.html
@@ -79,32 +79,32 @@
           <img class="w-100" src="image/sunset.jpg" alt="sunset" data-target="#carouselExample" data-slide-to="0">
            <!--text to explain the images--> 
            <div class="text-block">
-            <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
+            <h4>Sunset</h4>
+          <p>Wbeautiful sunset</p>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2184.jpg" data-target="#carouselExample" data-slide-to="0">
            <!--text to explain the images--> 
            <div class="text-block">
-            <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
+            <h4>Sunrise</h4>
+          <p>sunrise at my favorite surf spot</p>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2714.jpg" data-target="#carouselExample" data-slide-to="0">
            <!--text to explain the images--> 
            <div class="text-block">
-            <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
+            <h4>Surf</h4>
+          <p>Beautiful waves</p>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <img class="w-100" src="image/IMG_2734.jpg" data-target="#carouselExample" data-slide-to="0">
           <!--text to explain the images--> 
           <div class="text-block">
-            <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
+            <h4>A tree</h4>
+          <p>Bush walk is fun</p>
         </div>
         </div>
       </div>
