--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
 </header>
 
-<div class="background">
+
 
 <h1>Contact me</h1>
 
@@ -66,6 +66,13 @@
 <img src="image/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="ocean image" width="450px" class="oceanimage"> 
 
 </div>
-</div>
+
 </body>
+<!--Sticky footer-->
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted">Made by Tomomi</span>
+  </div>
+</footer>
+
 </html>
