--- a/portfolio.html
+++ b/portfolio.html
@@ -39,13 +39,14 @@
     </header>
 <!--image galleryy-->
 <div class="contianer">
-    <div class="row" id="gallery-rrow1" data-toggle="modal" data-target="#exampleModal">
-        <div class="col-12 col-sm-6 col-lg-3">
+    <div class="row" id="gallery-row1" data-toggle="modal" data-target="#exampleModal">
+      <!--media quary numbers of photos showing depend on different screen-->
+        <div class="col-12 col-sm-6 col-lg-3"> 
           <img class="w-100" src="image/sunset.jpg" alt="sunset" data-target="#carouselExample" data-slide-to="0">
           <!--text to explain the images--> 
           <div class="text-block">
               <h4>Nature</h4>
-            <p>What a beautiful sunrise</p>
+            <p>beautiful sunrise</p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
@@ -53,7 +54,7 @@
            <!--text to explain the images--> 
            <div class="text-block">
             <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
+          <p>beautiful sunrise</p>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
@@ -61,7 +62,7 @@
            <!--text to explain the images--> 
            <div class="text-block">
             <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
+          <p>beautiful sunrise</p>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
@@ -69,7 +70,7 @@
            <!--text to explain the images--> 
            <div class="text-block">
             <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
+          <p>beautiful sunrise</p>
         </div>
         </div>
       </div>
@@ -80,7 +81,7 @@
            <!--text to explain the images--> 
            <div class="text-block">
             <h4>Sunset</h4>
-          <p>Wbeautiful sunset</p>
+          <p>beautiful sunset</p>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
@@ -88,7 +89,7 @@
            <!--text to explain the images--> 
            <div class="text-block">
             <h4>Sunrise</h4>
-          <p>sunrise at my favorite surf spot</p>
+          <p>sunrise at my fav surf spot</p>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
@@ -110,4 +111,12 @@
       </div>
 
 </body>
+
+<!--Sticky footer-->
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted">Made by Tomomi</span>
+  </div>
+</footer>
+
 </html>
