--- a/index.html
+++ b/index.html
@@ -46,20 +46,28 @@
 
     <!--my photo-->
 <div class="col-md-5">
-    <img src="image/IMG_0322.jpg" alt="this is me" width="" class="img-thumbnail" id="myhpto">
+    <img src="image/IMG_0322.jpg" alt="this is me"  class="img-thumbnail" id="myhpto">
 </div>
 
 <div class="col-md-7">
 <!--biography-->
-    <p class="bio">I was born and raised in Japan, used to compete for snowboarding. Started traveling the world when I was 25, spent lot of time doing Yoga, Gardening, Cooking, and Surfing. Moved to Australia in 2015. <br>
-        My purpose from studying this course is to be creative, but also being able to help people from what I am making. <br>
-        <br>
-
-        Many people just use internet to find solution of the problem what they are facing these days. Even before asking actual people around them, or, the problem can be something for them to not comfortable to speak openly. I believe good website can help people to reach ***************************************:
-    </p>
+    <div class="bio">
+        <h4>Who I am</h4>
+        I was born and raised in Japan, used to compete for snowboarding. Started traveling the world when I was 25, spent lot of time doing Yoga, Gardening, Cooking, and Surfing. Moved to Australia in 2015. My life has been amazing here, surfing everyday, amazing nature, good coffee and lot of fruits and vegetables growing in my garden. I have decided to career changing from being a chef to web developer. I know it is a challenge, but I am very excited. 
+        
+       <h4>Purpose from this course</h4> 
+        From this course, I would love to learn who new skill about coding which I was always interested in. In this modern culture, everyone has a phone and when we face to a problem, we search on internet I found especially about mental issue, physical issue, we tend to search on internet instead of asking to people around ourself. I think, providing good information on the web is very important to navigate people in right path to reach out the help for those kinds of problem. That was the initial purpose of me decided to join this bootcamp. Hopefully I can achieve what I want to be. 
+    </div> 
+    
 </div>
 
 </div><!--div for row-->   
 </div><!--/div for container-->   
 </body>
+<!--sticky footer-->
+<footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted">Made by Tomomi</span>
+    </div>
+  </footer>
 </html>
