--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,8 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
   </form>
+<!--submit bottun-->
+  <button type="button" class="btn btn-info">submit</button>
 </div>
 
 
