--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
    
-    <link rel="stylesheet" href="CSS/contact.css">
+    <link rel="stylesheet" href="assets/CSS/contact.css">
    
     <title>Contact</title>
 
@@ -17,7 +17,7 @@
 <header>
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light"> 
-            <a class="navbar-text" style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 36px; color: #ffffff;">Tomomi Inoue</a>
+            <a class="navbar-text" style="font-family: Georgia, 'Times New Roman', Times, serif;">Tomomi Inoue</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,6 +45,8 @@
 <!--contact form bootstrap-->
 <div class="display">
 <div class="container">
+  <div class="row">
+    <div class="col-lg-7 form">
 <form>
     <div class="form-group">
       <label for="exampleFormControlInput1">Name</label>
@@ -59,22 +61,27 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
   </form>
+
+
 <!--submit bottun-->
-  <button type="button" class="btn btn-info">submit</button>
+
+<button type="button" class="btn btn-info">submit</button>
 </div>
 
-
+<div class="col-lg-5 form">
 <!--image-->
-<img src="image/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="ocean image" width="450px" class="oceanimage"> 
-
+<img src="assets/image/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="ocean image" width="450px" class="oceanimage"> 
+</div>
+</div>
+</div>
 </div>
 
-</body>
+
 <!--Sticky footer-->
 <footer class="footer mt-auto py-3">
   <div class="container">
     <span class="text-muted">Made by Tomomi</span>
   </div>
 </footer>
-
+</body>
 </html>
