--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 
 </head>
 <body>
-
     <header>
     
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light"> 
+        <nav class="navbar navbar-expand-lg navbar-light" roll="navigation">  
             <a class="navbar-text" style="font-family: Georgia, 'Times New Roman', Times, serif;">Tomomi Inoue</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav" id="menu">
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home/About me<span class="sr-only">(current)</span></a>
                 </li>
@@ -36,7 +35,8 @@
                   <a class="nav-link" href="contact.html">Contact</a>
                 
               </ul>
-            </div>
+            <!-- </div> -->
+          </div>
           </nav>
 
     </header>
@@ -59,8 +59,8 @@
 </div><!--sub row image-->
  <div class="row mx-auto ml-lg-0" id="links">
   <div class="col-12 pl-lg-0" id="subcol-links">
-  <div id="email"><a href = "mailto:xxxxxxxx@gmail.com" >Email: xxxxxxx@gmail.com</a></div>
-  <div id="phone"><a href = "tell:0123456789">Phone: 0123456789</a></div>
+  <div id="email"><a href = "mailto:xxxxxxxx@gmail.com" ><i class="fas fa-envelope-square"> xxxxxxx@gmail.com</i></a></div>
+  <div id="phone"><a href = "tell:0123456789"><i class="fas fa-phone"> 0123456789</i></a></div>
   <div id="github-link"><a href="https://github.com/Chib1co" target="_blank"><i class="fab fa-github-square"> Git hub page</i>  </a></div>
   <div id="linkedin-link"><a href="https://www.linkedin.com/in/tomomi-inoue-730ab71ab/" target="_blank"><i class="fab fa-linkedin"> Linkedin page</i></a></div>
 
