update-css-mobileresponsiveness/max-width

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 
     </header>
 <div class="container" id="bootstrap-conteiner">
+  <!-- <div class="row hello mx-auto">
+    <h3 id="hello">HELLO!</h3>
+  </div> -->
 <div class="row title">
   <h3>I am Web development student at BCS</h3>
 </div>
@@ -64,6 +67,7 @@
   <div id="phone"><a href = "tell:0123456789"><i class="fas fa-phone"> 0123456789</i></a></div>
   <div id="github-link"><a href="https://github.com/Chib1co" target="_blank"><i class="fab fa-github-square"> Git hub page</i>  </a></div>
   <div id="linkedin-link"><a href="https://www.linkedin.com/in/tomomi-inoue-730ab71ab/" target="_blank"><i class="fab fa-linkedin"> Linkedin page</i></a></div>
+  <div id="resume"><a href = "#"><i class="fas fa-file"> Resume (pdf file)</i></a></div>
 
  </div><!--sub row links-->
  </div><!--close col-->
@@ -90,14 +94,18 @@
 </div> <!--div for col-->
 
 </div><!--div for row-->   
-</div><!--/div for container-->   
-
-
-</body>
+</div><!--/div for container-->  
 <!--sticky footer-->
 <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text-muted">Made by Tomomi</span>
-    </div>
-  </footer>
+  <div class="container">
+    <span class="text-muted">Made by Tomomi</span>
+  </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+</body>
+
 </html>
