--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 </div><!--sub row image-->
  <div class="row mx-auto ml-lg-0" id="links">
   <div class="col-12 pl-lg-0" id="subcol-links">
-  <div id="email"><a href = "mailto:xxxxxxxx@gmail.com" ><i class="fas fa-envelope-square"> xxxxxxx@gmail.com</i></a></div>
-  <div id="phone"><a href = "tell:0123456789"><i class="fas fa-phone"> 0123456789</i></a></div>
-  <div id="github-link"><a href="https://github.com/Chib1co" target="_blank"><i class="fab fa-github-square"> Git hub page</i>  </a></div>
-  <div id="linkedin-link"><a href="https://www.linkedin.com/in/tomomi-inoue-730ab71ab/" target="_blank"><i class="fab fa-linkedin"> Linkedin page</i></a></div>
-  <div id="resume"><a href = "#"><i class="fas fa-file"> Resume (pdf file)</i></a></div>
+  <div class="link" id="email"><a href = "mailto:xxxxxxxx@gmail.com" ><i class="fas fa-envelope-square link"> xxxxxxx@gmail.com</i></a></div>
+  <div class="link" id="phone"><a href = "tell:0123456789"><i class="fas fa-phone link"> 0123456789</i></a></div>
+  <div class="link" id="github-link"><a href="https://github.com/Chib1co" target="_blank"><i class="fab fa-github-square link"> Git hub page</i>  </a></div>
+  <div class="link" id="linkedin-link"><a href="https://www.linkedin.com/in/tomomi-inoue-730ab71ab/" target="_blank"><i class="fab fa-linkedin link"> Linkedin page</i></a></div>
+  <div class="link" id="resume"><a href = "#"><i class="fas fa-file link"> Resume (pdf file)</i></a></div>
 
  </div><!--sub row links-->
  </div><!--close col-->
