--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
             <p>first web application used Javascript. You answer the quiz and save the score in your local storage</p>
           </div>
           <div class="link">
-          <span id="github-link"><a href="https://github.com/Chib1co/Fun_CodeQuiz" target="_blank" style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right"></i></a></span>
-          <span id="deployed-link"><a href="https://chib1co.github.io/Fun_CodeQuiz/" target="_blank" style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right"></i></a></span>
+          <span id="github-link"><a href="https://github.com/Chib1co/Fun_CodeQuiz" target="_blank" style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right link-hover"></i></a></span>
+          <span id="deployed-link"><a href="https://chib1co.github.io/Fun_CodeQuiz/" target="_blank" style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right link-hover"></i></a></span>
         </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-4">
