adding images, changing portfolio page

--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,15 @@
 
 
 <!--contact form bootstrap-->
-<div class="display">
+<div class="display bg-hero">
 <div class="container">
+ 
   <div class="row">
 <h1>Contact me</h1>
   </div>
   <div class="row">
     <div class="col-lg-7 form">
+      <div class="card shadow contact-me-card">
 <form>
     <div class="form-group">
       <label for="exampleFormControlInput1">Name</label>
@@ -70,9 +72,9 @@
 <button type="button" class="btn btn-info">submit</button>
 </div>
 
-<div class="col-lg-5 form">
-<!--image-->
+<!-- <div class="col-lg-5 form">
 <img src="assets/image/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="ocean image" width="450px" class="oceanimage"> 
+</div> -->
 </div>
 </div>
 </div>
