--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
    
     <link rel="stylesheet" href="assets/CSS/contact.css">
+    
    
     <title>Contact</title>
 
@@ -84,7 +85,7 @@
 <!--Sticky footer-->
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">Made by Tomomi</span>
+    <span class="text">Made by Tomomi</span>
   </div>
 </footer>
 
