--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <!--google font-->
 <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <!--css style sheet-->
-     <link rel="stylesheet" href="assets/CSS/aboutme.css">
+  <link rel="stylesheet" href="assets/CSS/animation.css">
+   <link rel="stylesheet" href="assets/CSS/aboutme.css">
+
     <title>About me</title>
 
 </head>
@@ -43,20 +45,35 @@
           </nav>
 
     </header>
-<div id='stars'></div>
+<!-- <div id='stars'></div>
 <div id='stars2'></div>
-<div id='stars3'></div>
+<div id='stars3'></div> -->
 
-<div class="container" id="bootstrap-conteiner">
-  <!-- <div class="row hello mx-auto">
-    <h3 id="hello">HELLO!</h3>
-  </div> -->
-<div class="row title">
-  <h3 class="fade">I am Web development student at BCS</h3>
+<div class="ocean">
+  <div class="bubble bubble--1"></div>
+  <div class="bubble bubble--2"></div>
+  <div class="bubble bubble--3"></div>
+  <div class="bubble bubble--4"></div>
+  <div class="bubble bubble--5"></div>
+  <div class="bubble bubble--6"></div>
+  <div class="bubble bubble--7"></div>
+  <div class="bubble bubble--8"></div>
+  <div class="bubble bubble--9"></div>
+  <div class="bubble bubble--10"></div>
+  <div class="bubble bubble--11"></div>
+  <div class="bubble bubble--12"></div>
 </div>
-    
 
-<div class="row">
+
+<div class="row align-items-center header-img">
+<div class="offset-1 col-9 " id="home">
+</div>
+<!-- <div class="header-img"></div> -->
+<h3 class="fade title">I am Web development student at BCS</h3>
+</div>
+<div class="container" id="bootstrap-container">
+
+<div class="row first-row">
 
     
 <div class="col-lg-6 fade" id="photo-fadein">
@@ -103,14 +120,14 @@
 <!--sticky footer-->
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">Made by Tomomi</span>
+    <span class="text">Made by Tomomi</span>
   </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
+<script src="assets/js/navbar-scroll.js"></script>
 </body>
 
 </html>
