--- a/portfolio.html
+++ b/portfolio.html
@@ -44,181 +44,106 @@
   <!--image galleryy-->
   <div class="container" id="portfolios">
     <div class="row gallery" id="gallery-row1" data-toggle="modal" data-target="#exampleModal">
-      <div class="col-6 col-sm-12 col-lg-6">
+      <div class="col-sm-12 col-md-12 col-lg-6">
         <div class="card shadow">
           <div class="content-hover">
             <img class="card-img-top img-redirect" src="assets/repo-screenshot/Gym_tracker.png" alt="gymtracker-project2">
           </div>
-          <h4 class="repo-title">Gym Tracker/Group project2</h4>
-          <a type="button" class="btn btn-link" href="https://github.com/Chib1co/gymtrack" target="blank">Github page</a>
-          <a type="button" class="btn btn-link" href="https://gymtrack-app.herokuapp.com/" target="blank">Deployed page</a>
+          <div class="text-block">
+            <h4 class="repo-title">Gym Tracker/Group project2</h4>
+            <p>Second group project. Also out first full stack web application.  We created fake gym management app. </p>
+          <div class="link-btns">
+          <a type="button" class="btn btn-link" href="https://github.com/Chib1co/gymtrack" target="blank">Github page<i class="fas fa-chevron-right"></i></a>
+          <a type="button" class="btn btn-link" href="https://gymtrack-app.herokuapp.com/" target="blank">Deployed page<i class="fas fa-chevron-right"></i></a>
+        </div>
         </div>
       </div>
-        <div class="col-6 col-sm-12 col-lg-6">
+      </div>
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="card shadow">
             <div class="content-hover">
               <img class="card-img-top img-redirect" src="assets/repo-screenshot/Note_taker.png" alt="Note tracker">
             </div>
-            <h4 class="repo-title">Note taker</h4>
-            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Your-Note-Taker" target="blank">Github page</a>
-          <a type="button" class="btn btn-link" href="https://limitless-depths-93347.herokuapp.com/" target="blank">Deployed page</a>
+            <div class="text-block">
+              <h4 class="repo-title">Note taker</h4>
+              <p>Using Node.JS express. Simple note taking application. Keep the note, edit and delete.</p>
+            <div class="link-btns">
+            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Your-Note-Taker" target="blank">Github page<i class="fas fa-chevron-right"></i></a>
+            <a type="button" class="btn btn-link" href="https://limitless-depths-93347.herokuapp.com/" target="blank">Deployed page<i class="fas fa-chevron-right"></i></a>
           </div>
+          </div>
+        </div>
         </div>
       </div>
       <div class="row gallery" id="gallery-row2" data-toggle="modal" data-target="#exampleModal">
-        <div class="col-6 col-sm-12 col-lg-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="card shadow">
             <div class="content-hover">
               <img class="card-img-top img-redirect" src="assets/repo-screenshot/weather-repo.png" alt="tube training">
             </div>
-            <h4 class="repo-title">Weather WeatherForecast_Yourcity</h4>
-            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/WeatherForecast_Yourcity" target="blank">Github page</a>
-          <a type="button" class="btn btn-link" href="https://chib1co.github.io/WeatherForecast_Yourcity/" target="blank">Deployed page</a>
-            
+            <div class="text-block">
+              <h4 class="repo-title">Weather WeatherForecast_Yourcity</h4>
+              <p>Check the current weather of the searced city, also next 5 days weather forecast. local storage stores
+                the search history up to 5 cities.</p>
+            <div class="link-btns">
+            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/WeatherForecast_Yourcity" target="blank">Github page<i class="fas fa-chevron-right"></i></a>
+            <a type="button" class="btn btn-link" href="https://chib1co.github.io/WeatherForecast_Yourcity/" target="blank">Deployed page<i class="fas fa-chevron-right"></i></a>
+          </div>
+          </div>
           </div>
         </div>
-        <div class="col-6 col-sm-12 col-lg-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="card shadow">
             <div class="content-hover">
               <img class="card-img-top img-redirect" src="assets/repo-screenshot/codequiz1.png" alt="tube training">
             </div> 
-            <h4 class="repo-title">Code quizr</h4>
-              <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Fun_CodeQuiz" target="blank">Github page</a>
-          <a type="button" class="btn btn-link" href="https://chib1co.github.io/Fun_CodeQuiz/" target="blank">Deployed page</a>
-            
+            <div class="text-block">
+              <h4 class="repo-title">Code quiz</h4>
+              <p>first web application used Javascript. You answer the quiz and save the score in your local storage.</p>
+            <div class="link-btns">
+            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Fun_CodeQuiz" target="blank">Github page<i class="fas fa-chevron-right"></i></a>
+            <a type="button" class="btn btn-link" href="https://chib1co.github.io/Fun_CodeQuiz/" target="blank">Deployed page<i class="fas fa-chevron-right"></i></a>
+          </div>
+          </div>
           </div>
         </div>
       </div>
       <div class="row gallery" id="gallery-row3" data-toggle="modal" data-target="#exampleModal">
-        <div class="col-6 col-sm-12 col-lg-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="card shadow">
             <div class="content-hover">
               <img class="card-img-top img-redirect" src="assets/repo-screenshot/project1.png" alt="tube training">
             </div>
-            <h4 class="repo-title">Restaurant Otaku/Group project1</h4>
-            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Covid-Safe-Restaurant" target="blank">Github page</a>
-           <a type="button" class="btn btn-link" href="https://chib1co.github.io/Covid-Safe-Restaurant/" target="blank">Deployed page</a>
+            <div class="text-block">
+              <h4 class="repo-title">Restaurant Otaku/Group project1</h4>
+              <p>First group project. Used zomato API and google map API to search restaurants and add personal reviews and
+                photos</p>
+            <div class="link-btns">
+            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Covid-Safe-Restaurant" target="blank">Github page<i class="fas fa-chevron-right"></i></a>
+            <a type="button" class="btn btn-link" href="https://chib1co.github.io/Covid-Safe-Restaurant/" target="blank">Deployed page<i class="fas fa-chevron-right"></i></a>
+          </div>
+          </div>
           </div>
         </div>
-        <div class="col-6 col-sm-12 col-lg-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="card shadow">
             <div class="content-hover">
               <img class="card-img-top img-redirect" src="assets/repo-screenshot/burger_demoPage.png" alt="tube training">
             </div>  
-            <h4 class="repo-title">Burger</h4>
-            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Burger" target="blank">Github page</a>
-            <a type="button" class="btn btn-link" href="#">Deployed page</a>     
+            <div class="text-block">
+              <h4 class="repo-title">Burger</h4>
+              <p>Using mysql. ORM and handlebars, express. Adding burger, move to devoured whn you click the button.</p>
+            <div class="link-btns">
+            <a type="button" class="btn btn-link" href="https://github.com/Chib1co/Burger" target="blank">Github page<i class="fas fa-chevron-right"></i></a>
+            <!-- <a type="button" class="btn btn-link" href="https://chib1co.github.io/Covid-Safe-Restaurant/" target="blank">Deployed page<i class="fas fa-chevron-right"></i></a> -->
+          </div>
+          </div>
           </div>
         </div>
       </div>
 
     </div>
-  </div>
-    <div class="row" id="gallery-row1" data-toggle="modal" data-target="#exampleModal">
-      <!--media quary numbers of photos showing depend on different screen-->
-      <div class="col-12 col-sm-6 col-lg-4">
-        <img class="w-100" src="assets/image/Gym_tracker.png" alt="Gymtracker-Project2" data-target="#carouselExample"
-          data-slide-to="0">
-        <!--text to explain the images-->
-        <div class="text-block">
-          <h4>Gymtracker-Project2</h4>
-          <p>Second group project, also first full stack web application</p>
-        </div>
-        <div class="link">
-          <span id="github-link"><a href="https://github.com/Chib1co/Fun_CodeQuiz" target="_blank"
-              style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right link-hover"></i></a></span>
-          <span id="deployed-link"><a href="https://chib1co.github.io/Fun_CodeQuiz/" target="_blank"
-              style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right link-hover"></i></a></span>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4">
-        <img class="w-100" src="assets/repo-screenshot/generatepassword3.png" alt="password-generator"
-          data-target="#carouselExample" data-slide-to="0">
-        <!--text to explain the images-->
-        <div class="text-block">
-          <h4>Password Generater</h4>
-          <p>Generate password in betweet 8-128 charactors.User can choice to use lower case, uppercase, numbers, and
-            symbols</p>
-        </div>
-        <div class="link">
-          <span id="github-link"><a href="https://github.com/Chib1co/Good_Generate_Password" target="_blank"
-              style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right"></i></a></span>
-          <span id="deployed-link"><a href="https://chib1co.github.io/WeatherForecast_Yourcity/" target="_blank"
-              style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right"></i></a></span>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4">
-        <img class="w-100" src="assets/repo-screenshot/weather-repo.png" alt="weather forecast app"
-          data-target="#carouselExample" data-slide-to="0">
-        <!--text to explain the images-->
-        <div class="text-block">
-          <h4>Weather forecast web app</h4>
-          <p>User search the city to check the current weather, also next 5 days weather forecast. local storage stores
-            the search history of the cities up to 5 cities</p>
-        </div>
-        <div class="link">
-          <span id="github-link"><a href="https://github.com/Chib1co/WeatherForecast_Yourcity" target="_blank"
-              style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right"></i></a></span>
-          <span id="deployed-link"><a href="https://chib1co.github.io/Good_Generate_Password/" target="_blank"
-              style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right"></i></a></span>
-        </div>
-      </div>
 
-    </div>
-
-
-    <div class="row" id="gallery-row2" data-toggle="modal" data-target="#exampleModal">
-      <div class="col-12 col-sm-6 col-lg-4">
-        <img class="w-100" src="assets/repo-screenshot/project1.png" alt="Group-project1" data-target="#carouselExample"
-          data-slide-to="0">
-        <!--text to explain the images-->
-        <div class="text-block">
-          <h4>Restaurant search and review app</h4>
-          <p>First group project. Used zomato API and google map API to search restaurants and add personal reviews and
-            photos</p>
-        </div>
-        <div class="link">
-          <span id="github-link"><a href="https://github.com/Chib1co/Covid-Safe-Restaurant" target="_blank"
-              style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right"></i></a></span>
-          <span id="deployed-link"><a href="https://chib1co.github.io/Covid-Safe-Restaurant/" target="_blank"
-              style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right"></i></a></span>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4">
-        <img class="w-100" src="assets/repo-screenshot/codequiz1.png" alt="code-quiz web app"
-          data-target="#carouselExample" data-slide-to="0">
-        <!--text to explain the images-->
-        <div class="text-block">
-          <h4>Code quiz web application</h4>
-          <p>first web application used Javascript. You answer the quiz and save the score in your local storage</p>
-        </div>
-        <div class="link">
-          <span id="github-link"><a href="https://github.com/Chib1co/Fun_CodeQuiz" target="_blank"
-              style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right link-hover"></i></a></span>
-          <span id="deployed-link"><a href="https://chib1co.github.io/Fun_CodeQuiz/" target="_blank"
-              style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right link-hover"></i></a></span>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4">
-        <img class="w-100" src="assets/repo-screenshot/generatepassword3.png" alt="password-generator"
-          data-target="#carouselExample" data-slide-to="0">
-        <!--text to explain the images-->
-        <div class="text-block">
-          <h4>Password Generater</h4>
-          <p>Generate password in betweet 8-128 charactors.User can choice to use lower case, uppercase, numbers, and
-            symbols</p>
-        </div>
-        <div class="link">
-          <span id="github-link"><a href="https://github.com/Chib1co/Good_Generate_Password" target="_blank"
-              style="color: #FFEEEE;"> Git hub link <i class="fas fa-chevron-right"></i></a></span>
-          <span id="deployed-link"><a href="https://chib1co.github.io/WeatherForecast_Yourcity/" target="_blank"
-              style="color: #FFEEEE;">Deployed page<i class="fas fa-chevron-right"></i></a></span>
-        </div>
-      </div>
-
-    </div>
-  </div>
-  </div>
   <!--close container-->
 
 
@@ -226,7 +151,7 @@
   <!--Sticky footer-->
   <footer class="footer mt-auto py-3">
     <div class="container">
-      <span class="text-muted">Made by Tomomi</span>
+      <span class="text">Made by Tomomi</span>
     </div>
   </footer>
 
