hover,image direct try

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,7 @@
         <div class="card shadow">
           <div class="content-hover">
             <img class="card-img-top img-redirect" src="assets/repo-screenshot/Gym_tracker.png" alt="gymtracker-project2">
+            <!-- <a class="text-redirect" href="https://gymtrack-app.herokuapp.com/">Gymtrack</a> -->
           </div>
           <div class="text-block">
             <h4 class="repo-title">Gym Tracker/Group project2</h4>
